feat(cli): add compiler command interface (#25)
* docs(cli): plan picocli command interface

- Document the API-backed CLI contract, options, verbosity, and exit codes.
- Require CLI production classes under dev.superice.gdcc.cli with declarative picocli annotations.
- Add picocli codegen annotation processing for declarative command metadata.

* feat(cli): add picocli entrypoint and console-safe output

- Add declarative gdcc command skeleton and delegate Main through picocli.
- Switch CLI logging to plain output while preserving the default colored logger mode.
- Route console writes through charset-aware escaping to avoid losing unmappable text.
- Cover CLI parsing, logger modes, and console encoding with focused tests.

* feat(cli): prepare API module inputs from source files

- Load validated UTF-8 source files into deterministic CLI VFS paths.
- Preserve original display paths while allowing duplicate host basenames.
- Reject invalid inputs before module creation and document Step 2 completion.
- Cover CLI input normalization with focused positive and negative tests.

* feat(cli): configure compile options for prepared modules

- Map --gde 4.5.1 to the current Godot API version.
- Derive CompileOptions projectPath from the output target parent.
- Keep default optimization, target platform, strict mode, and output mount settings.
- Cover Step 3 option configuration without pinning future GDExtension versions as rejected.

* feat(cli): execute compile tasks

- Wire the gdcc command to configure mappings, submit API compile tasks, poll completion, drain verbose events, and render final results.
- Add prefix and explicit class-map merge behavior backed by shared frontend default class-name derivation.
- Preserve canonical-name map order through API task snapshots and prefer cancellation outcomes during interrupted native builds.
- Cover CLI input, mapping, task outcomes, and frontend default class-name derivation with targeted tests.
- Update the CLI implementatio