@@ -26,6 +26,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Clock;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -37,11 +39,6 @@ import java.util.stream.Collectors;
 /// Executes one compile task after the API facade has accepted and registered it.
 public final class CompileTaskRunner implements Runnable {
     private static final @NotNull DiagnosticSnapshot EMPTY_DIAGNOSTICS = new DiagnosticSnapshot(List.of());
-    private static final @NotNull List<String> GENERATED_FILE_NAMES = List.of(
-            "entry.c",
-            "engine_method_binds.h",
-            "entry.h"
-    );
 
     private final @NotNull Clock clock;
     private final @NotNull GdScriptParserService parserService;
@@ -322,7 +319,6 @@ public final class CompileTaskRunner implements Runnable {
             );
             var buildResult = projectBuilder.buildProject(projectInfo, codegen);
             throwIfCancellationRequested();
-            var generatedFiles = collectGeneratedFiles(projectPath);
             if (!buildResult.success()) {
                 return new CompileResult(
                         CompileResult.Outcome.BUILD_FAILED,
@@ -332,7 +328,7 @@ public final class CompileTaskRunner implements Runnable {
                         frontendDiagnostics,
                         "Native build reported failure; see buildLog for details",
                         buildResult.buildLog(),
-                        generatedFiles,
+                        buildResult.generatedFiles(),
                         buildResult.artifacts(),
                         List.of()
                 );
@@ -340,7 +336,7 @@ public final class CompileTaskRunner implements Runnable {
             try {
                 throwIfCancellationRequested();
                 var outputLinks = request.outputMounter().apply(new BuildOutputs(
-                        generatedFiles,
+                        buildResult.generatedFiles(),
                         buildResult.artifacts()
                 ));
                 return new CompileResult(
@@ -351,7 +347,7 @@ public final class CompileTaskRunner implements Runnable {
                         frontendDiagnostics,
                         null,
                         buildResult.buildLog(),
-                        generatedFiles,
+                        buildResult.generatedFiles(),
                         buildResult.artifacts(),
                         outputLinks
                 );
@@ -362,11 +358,14 @@ public final class CompileTaskRunner implements Runnable {
                         frontendDiagnostics,
                         exception,
                         buildResult.buildLog(),
-                        generatedFiles,
+                        buildResult.generatedFiles(),
                         buildResult.artifacts()
                 );
             }
         } catch (IOException exception) {
+            if (taskState.cancellationRequested()) {
+                throw new TaskCanceledException();
+            }
             return new CompileResult(
                     CompileResult.Outcome.BUILD_FAILED,
                     request.compileOptions(),
@@ -375,7 +374,7 @@ public final class CompileTaskRunner implements Runnable {
                     remapDiagnosticSourcePaths(request, diagnostics.snapshot()),
                     "Build pipeline failed: " + exception.getMessage(),
                     exception.getMessage(),
-                    collectGeneratedFiles(projectPath),
+                    List.of(),
                     List.of(),
                     List.of()
             );
@@ -466,7 +465,6 @@ public final class CompileTaskRunner implements Runnable {
             @Nullable Request request,
             @NotNull Throwable throwable
     ) {
-        var projectPath = request == null ? null : request.compileOptions().projectPath();
         var failureMessage = "Compile task failed unexpectedly: " + describeThrowable(throwable);
         return new CompileResult(
                 CompileResult.Outcome.BUILD_FAILED,
@@ -476,14 +474,13 @@ public final class CompileTaskRunner implements Runnable {
                 EMPTY_DIAGNOSTICS,
                 failureMessage,
                 failureMessage,
-                projectPath == null ? List.of() : collectGeneratedFiles(projectPath),
+                List.of(),
                 List.of(),
                 List.of()
         );
     }
 
     private @NotNull CompileResult canceledResult(@Nullable Request request) {
-        var projectPath = request == null ? null : request.compileOptions().projectPath();
         return new CompileResult(
                 CompileResult.Outcome.CANCELED,
                 request == null ? CompileOptions.defaults() : request.compileOptions(),
@@ -492,7 +489,7 @@ public final class CompileTaskRunner implements Runnable {
                 EMPTY_DIAGNOSTICS,
                 "Compile task was canceled",
                 "",
-                projectPath == null ? List.of() : collectGeneratedFiles(projectPath),
+                List.of(),
                 List.of(),
                 List.of()
         );
@@ -503,13 +500,6 @@ public final class CompileTaskRunner implements Runnable {
         return message == null || message.isBlank()
                 ? throwable.getClass().getSimpleName()
                 : throwable.getClass().getSimpleName() + ": " + message;
-    }
-
-    private @NotNull List<Path> collectGeneratedFiles(@NotNull Path projectPath) {
-        return GENERATED_FILE_NAMES.stream()
-                .map(projectPath::resolve)
-                .filter(Files::exists)
-                .toList();
     }
 
     private @NotNull CompileResult outputMountConfigurationFailure(
@@ -554,10 +544,10 @@ public final class CompileTaskRunner implements Runnable {
             Objects.requireNonNull(moduleId, "moduleId must not be null");
             Objects.requireNonNull(moduleName, "moduleName must not be null");
             Objects.requireNonNull(compileOptions, "compileOptions must not be null");
-            topLevelCanonicalNameMap = Map.copyOf(Objects.requireNonNull(
+            topLevelCanonicalNameMap = Collections.unmodifiableMap(new LinkedHashMap<>(Objects.requireNonNull(
                     topLevelCanonicalNameMap,
                     "topLevelCanonicalNameMap must not be null"
-            ));
+            )));
             sourceSnapshots = List.copyOf(Objects.requireNonNull(sourceSnapshots, "sourceSnapshots must not be null"));
             Objects.requireNonNull(outputMountValidator, "outputMountValidator must not be null");
             Objects.requireNonNull(outputPublicationPreparer, "outputPublicationPreparer must not be null");
